-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: repo-lilliput-17
-
Component/s: hotspot
-
generic
-
generic
This test:
make run-test TEST=vmTestbase/nsk/jvmti/GetObjectMonitorUsage/objmonusage001/TestDescription.java
fails with:
(0) unexpected owner: Thread-1 (0x(nil))
(0) waiter_count expected: 1, actually: 0
Reason is thatJDK-8295849 (which is a pre-req for Lilliput) has not been backported properly.
A number of other JVMTI tests are failing because of the same issue, too:
vmTestbase/nsk/jvmti/GetObjectMonitorUsage/objmonusage001/TestDescription.java
vmTestbase/nsk/jvmti/GetObjectMonitorUsage/objmonusage003/TestDescription.java
vmTestbase/nsk/jvmti/GetObjectMonitorUsage/objmonusage004/TestDescription.java
vmTestbase/nsk/jvmti/scenarios/contention/TC01/tc01t001/TestDescription.java
vmTestbase/nsk/jvmti/scenarios/contention/TC03/tc03t001/TestDescription.java
vmTestbase/nsk/jvmti/scenarios/contention/TC03/tc03t002/TestDescription.java
make run-test TEST=vmTestbase/nsk/jvmti/GetObjectMonitorUsage/objmonusage001/TestDescription.java
fails with:
(0) unexpected owner: Thread-1 (0x(nil))
(0) waiter_count expected: 1, actually: 0
Reason is that
A number of other JVMTI tests are failing because of the same issue, too:
vmTestbase/nsk/jvmti/GetObjectMonitorUsage/objmonusage001/TestDescription.java
vmTestbase/nsk/jvmti/GetObjectMonitorUsage/objmonusage003/TestDescription.java
vmTestbase/nsk/jvmti/GetObjectMonitorUsage/objmonusage004/TestDescription.java
vmTestbase/nsk/jvmti/scenarios/contention/TC01/tc01t001/TestDescription.java
vmTestbase/nsk/jvmti/scenarios/contention/TC03/tc03t001/TestDescription.java
vmTestbase/nsk/jvmti/scenarios/contention/TC03/tc03t002/TestDescription.java