8307764: [Lilliput/JDK17] Fix JVMTI GetObjectMonitorUsage()